[gd_scene load_steps=5 format=2]

[ext_resource path="res://AI/RootAI.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[node name="Pawn" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 10, 0 )
shape = SubResource( 2 )

[node name="PawnSenseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="PawnSenseArea"]
shape = SubResource( 3 )

[node name="AttackCooldownTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="PawnSenseArea" to="." method="_on_PawnSenseArea_body_entered"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
